--- a/src/css-dev/abstracts/_mixins.scss
+++ b/src/css-dev/abstracts/_mixins.scss
@@ -23,21 +23,9 @@
 
 @mixin intro() {
    @include theme-text('1');
-   font-size: var(--fontSize-20);
+   font-size: var(--fontSize-emphasized);
    font-weight: var(--fontWeight-light);
    line-height: var(--lineHeight-heading);
-
-   @include breakpoint( sm ) {
-      font-size: var(--fontSize-22);
-   }
-
-   @include breakpoint( md ) {
-      font-size: var(--fontSize-24);
-   }
-
-   @include breakpoint( xl ) {
-      font-size: var(--fontSize-26);
-   }
 }
 
 @mixin link-style() {
