new hero graphic version

--- a/src/css-dev/abstracts/_variables.scss
+++ b/src/css-dev/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $ff-stack:  'Titillium Web', "Helvetica Neue", Arial, "Noto Sans", sans-serif;
 $ff-ui:     'Chivo', "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+$ff-graphic: 'Teko', 'Titillium Web', "Helvetica Neue", Arial, "Noto Sans", sans-serif;
 
 $c-plum:                #715191;
 $c-rose:                #BA5B80;
