add product cards

--- a/src/css-dev/abstracts/_index.scss
+++ b/src/css-dev/abstracts/_index.scss
@@ -5,6 +5,7 @@
 @import './mixins';
 @import './linear-gradients';
 @import './toolbox';
+@import './functions';
 
 @import './base';
 @import './themes';
