--- a/src/css-dev/atoms/_index.scss
+++ b/src/css-dev/atoms/_index.scss
@@ -1,6 +1,8 @@
 @import './button';
 @import './buttonBlock';
 @import './calloutBlock';
+@import './card';
+@import './cardGridBlock';
 @import './eyebrow';
 @import './forms';
 @import './imageBlock';
