--- a/src/css-dev/organisms/_footer.scss
+++ b/src/css-dev/organisms/_footer.scss
@@ -36,7 +36,15 @@ footer.footer {
 
       @include breakpoint( md ) {
          gap: var(--fontSize-45);
-         grid-auto-rows: 50%;
+         grid-auto-rows: min(35vh);
+      }
+
+      @include breakpoint( lg ) {
+         grid-auto-rows: min(40vh);
+      }
+
+      @include breakpoint( xl ) {
+         grid-auto-rows: min(45vh);
       }
    }
 
@@ -49,36 +57,16 @@ footer.footer {
       @include button( 'full', $gap: 30% );
       align-items: center;
       display: flex;
-      font-size: var(--fontSize-16);
+      font-size: fluid(1.125rem, 2.25rem);
       justify-content: center;
       height: 100%;
       padding: var(--fontSize-16);
       text-align: center;
-
-      @include breakpoint( xs ) {
-         font-size: var(--fontSize-20);
-      }
-
-      @include breakpoint( sm ) {
-         font-size: var(--fontSize-24);
-      }
-
-      @include breakpoint( md ) {
-         font-size: var(--fontSize-28);
-      }
-
-      @include breakpoint( lg ) {
-         font-size: var(--fontSize-32);
-      }
-
-      @include breakpoint( xl ) {
-         font-size: var(--fontSize-36);
-      }
    }
 
    &__wrapper {
       display: grid;
-      gap: var(--fontSize-30);
+      gap: 3rem;
       grid-template-areas:
          'LOCATIONS'
          'SOCIAL'
@@ -88,26 +76,29 @@ footer.footer {
       padding: 0;
 
       @include breakpoint( sm ) {
+         gap: var(--fontSize-30) var(--fontSize-60);
          grid-template-areas:
          'LOCATIONS SIGNUP'
          'SOCIAL BRAND';
+
+         grid-template-columns: repeat(2, 1fr);
       }
 
       @include breakpoint( lg ) {
          grid-template-areas:
-         'LOCATIONS SOCIAL BRAND'
-         'LOCATIONS SIGNUP BRAND';
+         'LOCATIONS SIGNUP BRAND'
+         'LOCATIONS SOCIAL BRAND';
+         grid-template-columns: auto auto max-content;
       }
 
       @include breakpoint( xl ) {
-         grid-template-areas: 'LOCATIONS SOCIAL SIGNUP BRAND';
-         //place-items: center;
+         gap: var(--fontSize-30) var(--fontSize-90);
       }
    }
 
    &__locations {
       display: grid;
-      gap: var(--fontSize-16);
+      gap: fluid(1.25, 2.5);
       grid-area: LOCATIONS;
    }
 
@@ -117,6 +108,8 @@ footer.footer {
 
    &__locationsState {
       color: $c-white;
+      display: grid;
+      gap: fluid(1.25, 1.5);
       font-size: var(--fontSize-13);
       font-weight: var(--fontWeight-semibold);
       margin: 0;
@@ -125,10 +118,9 @@ footer.footer {
 
    &__locationsStateWrapper {
       @extend %remove-list-styles;
-      display: grid;
-      gap: 15px;
-      grid-auto-flow: column;
-      grid-auto-columns: max-content;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem 1rem;
    }
 
    &__locationsCity {
@@ -137,8 +129,10 @@ footer.footer {
 
    &__locationsCityLink {
       color: $c-coral;
+      display: block;
       font-size: var(--fontSize-18);
       font-weight: var(--fontWeight-bold);
+      line-height: 1.1;
 
       &:hover,
       &:focus {
@@ -169,26 +163,20 @@ footer.footer {
 
       @include breakpoint( lg ) {
          align-items: start;
+         gap: 2.5rem;
          grid-template-columns: repeat( 2 , max-content );
-      }
-
-      @include breakpoint( xl ) {
-         grid-template-columns: max-content;
       }
    }
 
    &__socialItem {
       align-items: center;
       display: flex;
+      gap: 1.125rem;
       margin: 0;
       position: relative;
 
       &:focus-within {
          @include focus-style();
-      }
-
-      > * + * {
-         margin-left: 30px;
       }
    }
 
@@ -215,8 +203,8 @@ footer.footer {
    }
 
    &__signup {
-      align-items: flex-start;
-      flex-direction: column;
+      gap: 1rem;
+      display: grid;
       grid-area: SIGNUP;
       margin: 0;
 
@@ -224,7 +212,7 @@ footer.footer {
          color: $c-white;
          font-size: 21px;
          font-weight: 700;
-         margin: 0 0 1rem;
+         margin: 0;
       }
 
       &Form form {
@@ -240,8 +228,12 @@ footer.footer {
          }
 
          @include breakpoint( md ) {
-            grid-auto-flow: column;
+            grid-template-columns: auto max-content;
             justify-items: start;
+         }
+
+         @include breakpoint( xl ) {
+            grid-template-columns: 20vw max-content;
          }
       }
 
@@ -251,10 +243,19 @@ footer.footer {
 
       .gform_body {
          margin: 0;
+         width: 100%;
+
+         > .gform_fields {
+            width: 100%;
+         }
       }
 
       label {
          @include visuallyhidden();
+      }
+
+      input[type="email"] {
+         height: 51px;
       }
    }
 
