--- a/src/css-dev/organisms/_pageSection.scss
+++ b/src/css-dev/organisms/_pageSection.scss
@@ -69,8 +69,8 @@
       }
 
       .pageSection__halfImage {
-         flex: 0 1 50vh;
-         height: 50vh;
+         flex: 0 1 45vh;
+         height: auto;
 
          @include breakpoint( sm ) {
             flex: 0 0 60vh;
