--- a/src/css-dev/organisms/_footer.scss
+++ b/src/css-dev/organisms/_footer.scss
@@ -142,6 +142,11 @@ footer.footer {
       &:focus {
          @include focus-style();
       }
+
+      &.-currentPage {
+         opacity: 0.5;
+         pointer-events: none;
+      }
    }
 
 
@@ -199,6 +204,11 @@ footer.footer {
 
       &:focus {
          outline: none;
+      }
+
+      &.-currentPage {
+         opacity: 0.5;
+         pointer-events: none;
       }
    }
 
