--- a/src/css-dev/molecules/_homepageVideo.scss
+++ b/src/css-dev/molecules/_homepageVideo.scss
@@ -1,10 +1,10 @@
 .homeVideo {
-   position: absolute;
-   z-index: 300;
-   top: 0;
-   left: 0;
-   right: 0;
    bottom: 0;
+   left: 0;
+   position: absolute;
+   right: 0;
+   top: 0;
+   z-index: 300;
 
    svg,
    img,
@@ -14,6 +14,7 @@
       width: 100%;
    }
 
+   &__poster,
    &__logo,
    &__video {
       position: absolute;
