fix fallback image style

--- a/src/css-dev/molecules/_homepageVideo.scss
+++ b/src/css-dev/molecules/_homepageVideo.scss
@@ -22,6 +22,11 @@
       left: 0;
       right: 0;
       bottom: 0;
+
+   }
+
+   &__poster.gatsby-image-wrapper {
+      position: absolute;
    }
 
    &__logo {
